using System.Collections;
using UnityEngine;

namespace Safari.View.UI.Construction
{
    public class ShopListingController : MonoBehaviour
    {
        public BuildingShopItem item;

        // Use this for initialization
        void Start()
        {

        }

        // Update is called once per frame
        void Update()
        {

        }
    }
}