@startuml
namespace View{
class BuildingUIController{
    +OnDemolishClick():void
    +OnClose():void
    +Open():void
}

class ShopListingController{
    -notEnoughMoney: boolean
    +Selected: UnityEvent
    +OnClick(): void
    +SetNotEnoughMoneyState(s: boolean): void
}

class BuilderGridController{
    +IsOpened:bool
    +Open()
    +Close()
}

class BuilderCell{
    -isHovered: bool
    -isForbidden: bool
    +OnClick()
    +OnHover()
    +SetForbiddenState(forbidden:bool)
}
abstract class BuildingShopItem{
    +icon: GameObject
}

class FieldMetadata{
    +cost:int
    +refundAmount: int
}
}
BuilderGridController "controller" *-- "*\n-cells" BuilderCell : creates >

BuildingUIController  o-- "1\n-grid" BuilderGridController

BuildingUIController  o-left-- "1\n+shopItems" BuildingShopItem

BuildingUIController *-- "*" ShopListingController : creates >

ShopListingController -- "shopItem" BuildingShopItem : displays >




Class Unity.ScriptableObject{}
Class Unity.MonoBehaviour{}
Class Model.FieldFactory{}

BuildingShopItem --|> ScriptableObject
BuildingUIController --|> MonoBehaviour
BuilderGridController --|> MonoBehaviour
ShopListingController --|> MonoBehaviour
BuilderCell --|> MonoBehaviour
BuildingShopItem .up.|> FieldFactory
BuildingShopItem o-- FieldMetadata

@enduml